--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -1,34 +1,34 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Scala CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: List files
+      run: ls -R
+
+    - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
         distribution: 'corretto'
-        cache: 'sbt'
-    - name: Run tests
+        java-version: '17'
+
+    - name: Cache SBT
+      uses: actions/cache@v3
+      with:
+        path: ~/.sbt
+        key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}
+        restore-keys: |
+          ${{ runner.os }}-sbt-
+
+    - name: Test with SBT
       run: sbt test
-      # Optional: This step uploads information to the GitHub dependency graph and unblocking Dependabot alerts for the repository
-    - name: Upload dependency graph
-      uses: scalacenter/sbt-dependency-submission@ab086b50c947c9774b70f39fc7f6e20ca2706c91
