added all branches for testing in CI

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -3,32 +3,32 @@ name: Scala CI
 on:
   push:
     branches:
-      - main
+      - '*'  # This includes all branches
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: List files
-      run: ls -R
+      - name: List files
+        run: ls -R
 
-    - name: Set up JDK
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'corretto'
-        java-version: '17'
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'corretto'
+          java-version: '17'
 
-    - name: Cache SBT
-      uses: actions/cache@v3
-      with:
-        path: ~/.sbt
-        key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}
-        restore-keys: |
-          ${{ runner.os }}-sbt-
+      - name: Cache SBT
+        uses: actions/cache@v3
+        with:
+          path: ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}
+          restore-keys: |
+            ${{ runner.os }}-sbt-
 
-    - name: Test with SBT
-      run: sbt test
+      - name: Test with SBT
+        run: sbt test
